Remove unavailable property in Java 8